# AegisTrader

./: .deploy.env  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint  CONTRIBUTING.md  K8S_CURRENT_STATE.md  Makefile  README.md  REFACTORING_SUMMARY.md  STAGING_SETUP_QUICKSTART.md  aegis  deploy.sh  docker-compose.yaml  generate-helm-values.sh  package-lock.json  port-forward.sh  pyproject.toml  test_correct_demo.py  verify-deployment.sh
.ai/: debug-log.md
.bmad-core/: core-config.yaml  install-manifest.yaml
aegis_sdk/: README.md  pyproject.toml
apps/: .env.openctp  VNPY_DEMO_README.md  run-openctp-services.sh  run-vnpy-demo.sh  test-client.py  test-direct-subscribe.py  test-openctp-connection.py  test-openctp-stocks.py  test-simple-subscribe.py  test_services_integration.py  test_vnpy_installation.py
apps/market-service/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  logging_config.py  main.py  pyproject.toml  requirements.txt  run-multiple.sh  test_failover.sh
apps/market-service/app_types/: __init__.py  dto.py  enums.py  interfaces.py
apps/market-service/application/: __init__.py  commands.py  gateway_service.py  handlers.py  health_service.py  metrics_adapter.py  queries.py  service_launcher.py  use_cases.py
apps/market-service/crossdomain/: __init__.py  adapters.py  anti_corruption.py  data_quality_checker.py  gateway_translators.py  translators.py
apps/market-service/data/: ctp_instruments_20250813_140857.csv  sopt_instruments_20250813_140214.csv
apps/market-service/docs/: deployment-ctp.md  timing_constraints_explanation.md  vnpy-docker-solution.md
apps/market-service/domain/: __init__.py  entities.py  events.py  ports.py  repositories.py  services.py  value_objects.py
apps/market-service/domain/gateway/: __init__.py  circuit_breaker.py  connection_manager.py  connection_pool.py  dashboard_config.py  events.py  metrics.py  models.py  ports.py  structured_logger.py  value_objects.py
apps/market-service/domain/market_data/: __init__.py  aggregates.py  entities.py  events.py  value_objects.py
apps/market-service/domain/shared/: events.py  value_objects.py
apps/market-service/domain/subscription/: __init__.py
apps/market-service/hooks/: format-python.sh
apps/market-service/infra/: __init__.py  adapters.py  cache.py  election_factory.py  event_publisher_adapter.py  messaging.py  persistence.py  repositories.py
apps/market-service/infra/adapters/gateway/: __init__.py  ctp_adapter.py  gateway_adapter.py  sopt_adapter.py
apps/market-service/infra/adapters/gateway/anti_corruption/: __init__.py  locale_manager.py  vnpy_event_adapter.py  vnpy_translator.py
apps/market-service/infra/adapters/gateway/components/: __init__.py  connection_manager.py  event_dispatcher.py  query_scheduler.py
apps/market-service/infra/adapters/nats/: nats_market_source.py
apps/market-service/infra/config/: base.py
apps/market-service/infra/factories/: abstract_factory.py  application_factory.py  ctp_service_factory.py  infrastructure_factory.py
apps/market-service/infra/publishing/: __init__.py
apps/market-service/infra/repositories/: base.py  clickhouse.py  in_memory.py
apps/market-service/infra/storage/: __init__.py
apps/market-service/k8s/: Chart.yaml  README.md  values-dev.yaml  values-prod.yaml  values.yaml
apps/market-service/k8s/templates/: _helpers.tpl  configmap-vnpy-fix.yaml  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
apps/market-service/pkg/: __init__.py  helpers.py  utils.py  validators.py
apps/market-service/scripts/: export_ctp_instruments.py  export_sopt_instruments.py  test_event_proof.py  test_real_ctp.py  test_real_sopt.py
apps/market-service/tests/: __init__.py  conftest.py  test_dependencies.py  test_project_structure.py
apps/market-service/tests/integration/: story1_2b_task_5.py  test_health_check.py  test_service.py  test_story1_2b_task8_real.py  test_task8_minimal_truth.py
apps/market-service/tests/performance/: TASK6_VERIFICATION_REPORT.md  test_capture_failover_logs.py  test_real_k8s_failover.py
apps/market-service/tests/results/: performance_benchmark_20250815_142854.json  real_performance_20250815_143633.json  real_performance_20250815_144236.json  real_performance_20250815_144326.json  real_performance_20250815_145302.json  real_performance_20250815_145345.json
apps/market-service/tests/scripts/: run_endurance_test.sh  run_integration_test.sh  run_performance_test.sh  run_stress_test.sh
apps/market-service/tests/unit/: test_application.py  test_domain.py  test_health_service.py  test_main.py  test_market_data_domain.py  test_metrics_integration.py
apps/market-service/tests/unit/domain/gateway/: test_connection_manager.py  test_connection_pool.py  test_connection_state_persistence.py  test_dashboard_config.py  test_enhanced_metrics.py  test_error_scenarios.py  test_gateway_service.py  test_metrics.py  test_models.py  test_ports.py  test_structured_logger.py
apps/market-service/tests/unit/infra/: test_event_publisher_adapter.py
apps/market-service/tests/unit/infra/gateway/: test_ctp_adapter.py
apps/market-service/tests/utils/: output_filter.py
apps/market-service/whl/: ta_lib-0.6.5-cp313-cp313-manylinux_2_28_x86_64.whl  vnpy_ctp-6.7.7.2-cp313-cp313-linux_x86_64.whl  vnpy_sopt-3.7.1.0-cp313-cp313-linux_x86_64.whl
demo-service/: enterprise-ddd-structure.md  run-aegis-cli.sh
docker/: README.md
docs/: ENVIRONMENT_VARIABLES.md  VNPY_INTEGRATION_PLAN.md  architecture.md  ci-cd-guide.md  ddd-bounded-contexts-design.md  github-actions-setup.md  prd.md  uiux.md  (+1 more)
docs-1/: prd.md
helm/: .helmignore  (+25 more)
(+358 files in other folders)
